week6/kakao-5th-apidoc-start-main/src/main/java/com/example/kakao/_core/errors/exception/Exception400.java
package com.example.kakao._core.errors.exception;

import com.example.kakao._core.utils.ApiUtils;
import lombok.Getter;
import org.springframework.http.HttpStatus;


// 유효성 검사 실패, 잘못된 파라메터 요청
@Getter
public class Exception400 extends HttpStatusException {

    public Exception400(String message) {
        super(message, HttpStatus.BAD_REQUEST);
    }

}